--- a/insult.html
+++ b/insult.html
@@ -1,15 +1,34 @@
-<DOCTYPE HTML>
+<!DOCTYPE HTML>
+<html>
+<style>
+p {
+	font-family: "Verdana", "Geneva", "sans-serif";
+	text-align: center;
+}
+#insult {
+	font-size: 60px;
+	font-weight: bold;
+}
+</style>
 <body>
+<p style="font-size:20px;">Curse-free Insult Generator</p>
 <p id="insult"></p>
+<p><button type="button" onclick="gen()">Try Another</button></p>
 <script>
 	var adjs = ["absolute", "abhorrent", "sordid", "repulsive", "catatonic",
-				"superfluous", "tedious", "preposterious", "incongruous",
-				"derisory", "obtuse"];
+				"superfluous", "tedious", "preposterous", "incongruous",
+				"derisory", "obtuse", "ridiculous", "incompetent", "revolting", "odious",
+				"utter", "redundant"];
 	var nouns = ["cabbage", "canteloupe", "peanut", "waffle", "celery stick",
 				"legume", "desk lamp", "ballpoint pen", "pumpkin seed", "cactus",
 				"jar of relish", "curtain rod", "rocking chair", "knitting needle",
-				"woolen sock"];
-	var adj = adjs[Math.floor(Math.random() * adjs.length)];
-	var noun = noun[Math.floor(Math.random() * noun.length)];
-	document.getElementById("insult").innerHTML = adj.toUpperCase() + "&nbsp" + noun.toUpperCase();
+				"woolen sock", "walnut", "loaf of bread", "lima bean", "potato"];
+	gen();
+	function gen() {
+		var adj = adjs[Math.floor(Math.random() * adjs.length)];
+		var noun = nouns[Math.floor(Math.random() * nouns.length)];
+		document.getElementById("insult").innerHTML = adj.toUpperCase() + "&nbsp" + noun.toUpperCase();
+	}
 </script>
+</body>
+</html>
